feat(seo): add comprehensive SEO optimization to marketing site
- Added meta tags (description, keywords, viewport) to all site pages
- Implemented Open Graph tags for social media sharing
- Added Twitter Card meta tags for better Twitter integration
- Included JSON-LD structured data (Organization, WebSite, TechArticle)
- Created XML sitemap with all 4 pages for search engine indexing
- Added robots.txt for search engine crawler guidance
- Created SVG favicon for browser tab display

This improves search engine visibility and social media sharing performance.

--- a/site/demo.html
+++ b/site/demo.html
@@ -3,8 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Demo - genX</title>
-  <meta name="description" content="Interactive demo of genX modules. See formatting, accessibility, drag & drop, tables, and more in action.">
+  <title>Interactive Demo - genX | Try Declarative JavaScript Live</title>
+  <meta name="description" content="Try genX live in your browser. Interactive demo showcasing currency formatting, date formatting, accessibility enhancements, drag-drop, data binding, and sortable tables.">
+
+  <!-- SEO Meta Tags -->
+  <meta name="keywords" content="genX demo, JavaScript library demo, interactive tutorial, live code example, HTML attributes demo, frontend playground">
+  <meta name="author" content="Adam Wasserman">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://genx.software/demo.html">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://genx.software/demo.html">
+  <meta property="og:title" content="genX Interactive Demo - Try It Live">
+  <meta property="og:description" content="See genX in action. Interactive demo with formatting, accessibility, data binding, drag-drop, and sortable tables.">
+  <meta property="og:image" content="https://genx.software/og-image.png">
+  <meta property="og:site_name" content="genX">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://genx.software/demo.html">
+  <meta name="twitter:title" content="genX Interactive Demo - Try It Live">
+  <meta name="twitter:description" content="See genX in action. Interactive demo with formatting, accessibility, data binding, drag-drop, and sortable tables.">
+  <meta name="twitter:image" content="https://genx.software/og-image.png">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=JetBrains+Mono:wght@400&display=swap" rel="stylesheet">
