--- a/site/docs.html
+++ b/site/docs.html
@@ -3,12 +3,65 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Documentation - genX</title>
-  <meta name="description" content="Learn how to install and use genX. Complete documentation for all modules.">
+  <title>Documentation - genX | Complete API Reference & Tutorials</title>
+  <meta name="description" content="Complete genX documentation. Learn fmtX formatting, accX accessibility, bindX data binding, dragX drag-drop, tableX tables, loadX loading states, navX routing, and smartX auto-detection.">
+
+  <!-- SEO Meta Tags -->
+  <meta name="keywords" content="genX documentation, JavaScript library docs, HTML attributes API, fmtX, accX, bindX, dragX, tableX, loadX, navX, smartX, frontend tutorial">
+  <meta name="author" content="Adam Wasserman">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://genx.software/docs.html">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://genx.software/docs.html">
+  <meta property="og:title" content="genX Documentation - Complete API Reference">
+  <meta property="og:description" content="Learn how to use genX modules: formatting, accessibility, data binding, drag-drop, tables, loading states, routing. Complete examples and API reference.">
+  <meta property="og:image" content="https://genx.software/og-image.png">
+  <meta property="og:site_name" content="genX">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://genx.software/docs.html">
+  <meta name="twitter:title" content="genX Documentation - Complete API Reference">
+  <meta name="twitter:description" content="Learn how to use genX modules: formatting, accessibility, data binding, drag-drop, tables, loading states, routing.">
+  <meta name="twitter:image" content="https://genx.software/og-image.png">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=JetBrains+Mono:wght@400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+
+  <!-- Structured Data - TechArticle -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "TechArticle",
+    "headline": "genX Documentation",
+    "description": "Complete documentation for genX - the declarative JavaScript library for frontend behavior",
+    "author": {
+      "@type": "Person",
+      "name": "Adam Wasserman"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "genX",
+      "url": "https://genx.software"
+    },
+    "mainEntityOfPage": "https://genx.software/docs.html",
+    "about": {
+      "@type": "SoftwareApplication",
+      "name": "genX"
+    }
+  }
+  </script>
 </head>
 <body>
   <header class="header">
