--- a/site/genx-demo.html
+++ b/site/genx-demo.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>genX Module Demo - Top 10 Examples Per Module</title>
+    <title>genX Module Demo - All 8 Modules with Live Examples</title>
+    <meta name="description" content="Comprehensive genX demo showing all 8 modules in action: fmtX formatting, accX accessibility, bindX data binding, dragX drag-drop, loadX loading states, navX routing, tableX tables, smartX auto-detection.">
+
+    <!-- SEO Meta Tags -->
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://genx.software/genx-demo.html">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
 
     <!-- Google Fonts - Dongle, Mulish, Inconsolata -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
