--- a/site/index.html
+++ b/site/index.html
@@ -3,12 +3,78 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>genX - The Tailwind of Frontend Behavior</title>
-  <meta name="description" content="Stop waiting on backend changes for UI tweaks. Formatting, tables, binding, accessibility — all from HTML attributes. With a server or without.">
+  <title>genX - The Tailwind of Frontend Behavior | Declarative JavaScript Library</title>
+  <meta name="description" content="genX is a lightweight (~1KB) declarative JavaScript library. Add formatting, accessibility, data binding, drag-drop, and more using HTML attributes. Zero dependencies, 60 FPS performance.">
+
+  <!-- SEO Meta Tags -->
+  <meta name="keywords" content="JavaScript library, HTML attributes, declarative UI, frontend framework, accessibility, WCAG, data binding, drag and drop, formatting, lightweight JavaScript, no dependencies">
+  <meta name="author" content="Adam Wasserman">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://genx.software/">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://genx.software/">
+  <meta property="og:title" content="genX - The Tailwind of Frontend Behavior">
+  <meta property="og:description" content="Declarative JavaScript via HTML attributes. Formatting, accessibility, data binding, tables, drag-drop — all without writing JavaScript. ~1KB bootloader, zero dependencies.">
+  <meta property="og:image" content="https://genx.software/og-image.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:site_name" content="genX">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://genx.software/">
+  <meta name="twitter:title" content="genX - The Tailwind of Frontend Behavior">
+  <meta name="twitter:description" content="Declarative JavaScript via HTML attributes. Formatting, accessibility, data binding, tables, drag-drop — all without writing JavaScript.">
+  <meta name="twitter:image" content="https://genx.software/og-image.png">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=JetBrains+Mono:wght@400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "genX",
+    "description": "The Tailwind of Frontend Behavior - Declarative JavaScript library for formatting, accessibility, data binding, and more via HTML attributes",
+    "url": "https://genx.software",
+    "applicationCategory": "DeveloperApplication",
+    "operatingSystem": "Any",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "author": {
+      "@type": "Person",
+      "name": "Adam Wasserman",
+      "url": "https://github.com/adamzwasserman"
+    },
+    "license": "https://opensource.org/licenses/MIT",
+    "programmingLanguage": "JavaScript",
+    "softwareVersion": "1.0.0-alpha",
+    "featureList": [
+      "Currency, date, and number formatting",
+      "WCAG 2.1 AA accessibility",
+      "Reactive data binding",
+      "Drag and drop",
+      "Table sorting and filtering",
+      "Loading states and skeletons",
+      "Client-side routing"
+    ]
+  }
+  </script>
 </head>
 <body>
   <header class="header">
