feat(site): switch demo to CDN bootloader for edge caching

--- a/site/genx-demo.html
+++ b/site/genx-demo.html
@@ -18,17 +18,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@400&family=Mulish:wght@400;500;600&family=Inconsolata:wght@400&display=swap" rel="stylesheet">
 
-    <!-- Load genX modules -->
-    <script src="js/genx-common.js"></script>
-    <script src="js/smartx.js"></script>
-    <script src="js/fmtx.js"></script>
-    <script src="js/accx.js"></script>
-    <script src="js/bindx.js"></script>
-    <script src="js/dragx.js"></script>
-    <script src="js/loadx.js"></script>
+    <!-- Load genX from CDN -->
+    <script src="https://cdn.genx.software/v1/bootloader.min.js" defer></script>
     <link rel="stylesheet" href="css/loadx.css">
-    <script src="js/navx.js"></script>
-    <script src="js/tablex.js"></script>
     <link rel="stylesheet" href="css/tablex.css">
 
     <style>
