--- a/site/genx-demo.html
+++ b/site/genx-demo.html
@@ -25,6 +25,32 @@
     <link rel="stylesheet" href="css/tablex.css">
 
     <style>
+        /* Font metric overrides to eliminate CLS during font swap */
+        @font-face {
+            font-family: 'Mulish-fallback';
+            src: local('BlinkMacSystemFont'), local('Segoe UI'), local('Helvetica Neue'), local('Arial');
+            size-adjust: 104%;
+            ascent-override: 95%;
+            descent-override: 26%;
+            line-gap-override: 0%;
+        }
+        @font-face {
+            font-family: 'Dongle-fallback';
+            src: local('Arial'), local('Helvetica');
+            size-adjust: 140%;
+            ascent-override: 100%;
+            descent-override: 30%;
+            line-gap-override: 0%;
+        }
+        @font-face {
+            font-family: 'Inconsolata-fallback';
+            src: local('SF Mono'), local('Monaco'), local('Consolas'), local('Courier New');
+            size-adjust: 105%;
+            ascent-override: 95%;
+            descent-override: 22%;
+            line-gap-override: 0%;
+        }
+
         * {
             margin: 0;
             padding: 0;
@@ -45,7 +71,7 @@
         }
 
         body {
-            font-family: 'Mulish', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            font-family: 'Mulish', 'Mulish-fallback', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
             line-height: 1.6;
             color: #333;
             background: #fafafa;
@@ -72,7 +98,7 @@
         header h1 {
             font-size: 2.5rem;
             margin-bottom: 10px;
-            font-family: 'Dongle', sans-serif;
+            font-family: 'Dongle', 'Dongle-fallback', sans-serif;
             font-weight: 400;
         }
 
@@ -196,7 +222,7 @@
             display: block;
             font-size: 0.85rem;
             color: #999;
-            font-family: 'Inconsolata', 'Courier New', monospace;
+            font-family: 'Inconsolata', 'Inconsolata-fallback', 'Courier New', monospace;
             margin-bottom: 8px;
             padding: 5px 8px;
             background: #f5f5f5;
@@ -609,7 +635,7 @@
             background: var(--hover-bg);
             padding: 4px 10px;
             border-radius: 4px;
-            font-family: 'Inconsolata', monospace;
+            font-family: 'Inconsolata', 'Inconsolata-fallback', monospace;
             font-size: 0.9em;
             border: 1px solid var(--border-color);
         }
