--- a/site/demo.html
+++ b/site/demo.html
@@ -33,36 +33,32 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
+  <!-- Critical CSS inlined for FCP -->
+  <style>
+    @font-face{font-family:'Inter-fallback';src:local('BlinkMacSystemFont'),local('Segoe UI'),local('Helvetica Neue'),local('Arial');size-adjust:107%;ascent-override:90%;descent-override:22%;line-gap-override:0%}
+    :root{--color-bg:#fafafa;--color-bg-warm:#f5f3f0;--color-white:#fff;--color-text:#333;--color-text-light:#666;--color-text-muted:#999;--color-border:#e8e4df;--color-accent:#c4463a;--font-sans:'Inter','Inter-fallback',-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;--spacing-xs:.5rem;--spacing-sm:1rem;--spacing-md:2rem;--spacing-lg:4rem;--spacing-xl:6rem;--max-width:1200px;--transition:.2s ease}
+    *{margin:0;padding:0;box-sizing:border-box}
+    html{font-size:16px}body{font-family:var(--font-sans);line-height:1.7;color:var(--color-text);background:var(--color-bg);-webkit-font-smoothing:antialiased}
+    a{color:var(--color-text);text-decoration:none;border-bottom:1px solid var(--color-border)}
+    .container{max-width:var(--max-width);margin:0 auto;padding:0 var(--spacing-md)}
+    .header{padding:var(--spacing-sm) 0;position:sticky;top:0;background:var(--color-bg);z-index:100;border-bottom:1px solid var(--color-border)}
+    .header__inner{display:flex;justify-content:space-between;align-items:center}
+    .logo{font-size:1.5rem;font-weight:400;letter-spacing:-.03em;border:none}.logo .x{color:var(--color-accent)}
+    .nav{display:flex;gap:var(--spacing-md)}.nav a{font-size:.9rem;color:var(--color-text-light);border:none;padding:var(--spacing-xs) 0;position:relative}
+    .btn{display:inline-block;padding:.875rem 2rem;font-size:.9rem;font-weight:500;border:1px solid var(--color-text);background:transparent;color:var(--color-text);cursor:pointer;transition:all var(--transition);border-radius:0;text-decoration:none}
+    .demo-container{height:calc(100vh - 61px);display:flex;flex-direction:column}
+    .demo-header{padding:var(--spacing-sm) var(--spacing-md);background:var(--color-bg-warm);border-bottom:1px solid var(--color-border);display:flex;justify-content:space-between;align-items:center}
+    .demo-header__text{font-size:.875rem;color:var(--color-text-muted)}
+    .demo-frame{flex:1;width:100%;border:none}
+  </style>
+  <!-- Full CSS - non-blocking load -->
+  <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="style.css"></noscript>
   <!-- Fonts - non-blocking load -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=JetBrains+Mono:wght@400&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=JetBrains+Mono:wght@400&display=swap" rel="stylesheet"></noscript>
-  <link rel="stylesheet" href="style.css">
-  <style>
-    .demo-container {
-      height: calc(100vh - 61px);
-      display: flex;
-      flex-direction: column;
-    }
-    .demo-header {
-      padding: var(--spacing-sm) var(--spacing-md);
-      background: var(--color-bg-warm);
-      border-bottom: 1px solid var(--color-border);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    .demo-header__text {
-      font-size: 0.875rem;
-      color: var(--color-text-muted);
-    }
-    .demo-frame {
-      flex: 1;
-      width: 100%;
-      border: none;
-    }
-  </style>
 </head>
 <body>
   <header class="header">
