--- a/site/docs.html
+++ b/site/docs.html
@@ -33,12 +33,38 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
+  <!-- Critical CSS inlined for FCP -->
+  <style>
+    @font-face{font-family:'Inter-fallback';src:local('BlinkMacSystemFont'),local('Segoe UI'),local('Helvetica Neue'),local('Arial');size-adjust:107%;ascent-override:90%;descent-override:22%;line-gap-override:0%}
+    @font-face{font-family:'JetBrains Mono-fallback';src:local('SF Mono'),local('Monaco'),local('Consolas'),local('Courier New');size-adjust:103%;ascent-override:95%;descent-override:24%;line-gap-override:0%}
+    :root{--color-bg:#fafafa;--color-bg-warm:#f5f3f0;--color-white:#fff;--color-text:#333;--color-text-light:#666;--color-text-muted:#999;--color-border:#e8e4df;--color-accent:#c4463a;--font-sans:'Inter','Inter-fallback',-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;--font-mono:'JetBrains Mono','JetBrains Mono-fallback','SF Mono','Fira Code',monospace;--spacing-xs:.5rem;--spacing-sm:1rem;--spacing-md:2rem;--spacing-lg:4rem;--spacing-xl:6rem;--max-width:1200px;--transition:.2s ease}
+    *{margin:0;padding:0;box-sizing:border-box}
+    html{font-size:16px}body{font-family:var(--font-sans);line-height:1.7;color:var(--color-text);background:var(--color-bg);-webkit-font-smoothing:antialiased}
+    h2{font-weight:400;line-height:1.3;letter-spacing:-.02em;font-size:1.75rem;margin-bottom:var(--spacing-md)}
+    a{color:var(--color-text);text-decoration:none;border-bottom:1px solid var(--color-border)}
+    .container{max-width:var(--max-width);margin:0 auto;padding:0 var(--spacing-md)}
+    .header{padding:var(--spacing-sm) 0;position:sticky;top:0;background:var(--color-bg);z-index:100;border-bottom:1px solid var(--color-border)}
+    .header__inner{display:flex;justify-content:space-between;align-items:center}
+    .logo{font-size:1.5rem;font-weight:400;letter-spacing:-.03em;border:none}.logo .x{color:var(--color-accent)}
+    .nav{display:flex;gap:var(--spacing-md)}.nav a{font-size:.9rem;color:var(--color-text-light);border:none;padding:var(--spacing-xs) 0;position:relative}
+    .docs{display:grid;grid-template-columns:250px 1fr;gap:var(--spacing-lg);min-height:calc(100vh - 80px)}
+    .docs__nav{padding:var(--spacing-md) 0;position:sticky;top:80px;height:fit-content}
+    .docs__nav-title{font-size:.75rem;text-transform:uppercase;letter-spacing:.1em;color:var(--color-text-muted);margin-bottom:var(--spacing-sm)}
+    .docs__nav-list{list-style:none}.docs__nav-list a{display:block;padding:var(--spacing-xs) 0;font-size:.9rem;color:var(--color-text-light);border:none}
+    .docs__content{padding:var(--spacing-md) 0;max-width:800px}
+    pre,code{font-family:var(--font-mono);font-size:.875rem}
+    code{background:var(--color-bg-warm);padding:.125em .375em;border-radius:2px}
+    pre{background:var(--color-text);color:var(--color-bg);padding:var(--spacing-md);overflow-x:auto;line-height:1.5}
+    pre code{background:none;padding:0;color:inherit}
+  </style>
+  <!-- Full CSS - non-blocking load -->
+  <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="style.css"></noscript>
   <!-- Fonts - non-blocking load -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=JetBrains+Mono:wght@400&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=JetBrains+Mono:wght@400&display=swap" rel="stylesheet"></noscript>
-  <link rel="stylesheet" href="style.css">
 
   <!-- Structured Data - TechArticle -->
   <script type="application/ld+json">
