--- a/site/index.html
+++ b/site/index.html
@@ -35,12 +35,39 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
+  <!-- Critical CSS inlined for FCP -->
+  <style>
+    @font-face{font-family:'Inter-fallback';src:local('BlinkMacSystemFont'),local('Segoe UI'),local('Helvetica Neue'),local('Arial');size-adjust:107%;ascent-override:90%;descent-override:22%;line-gap-override:0%}
+    :root{--color-bg:#fafafa;--color-bg-warm:#f5f3f0;--color-white:#fff;--color-text:#333;--color-text-light:#666;--color-text-muted:#999;--color-border:#e8e4df;--color-accent:#c4463a;--font-sans:'Inter','Inter-fallback',-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;--spacing-xs:.5rem;--spacing-sm:1rem;--spacing-md:2rem;--spacing-lg:4rem;--spacing-xl:6rem;--max-width:1200px;--transition:.2s ease}
+    *{margin:0;padding:0;box-sizing:border-box}
+    html{font-size:16px}body{font-family:var(--font-sans);line-height:1.7;color:var(--color-text);background:var(--color-bg);-webkit-font-smoothing:antialiased}
+    h1{font-weight:300;line-height:1.3;letter-spacing:-.02em;font-size:3rem}
+    a{color:var(--color-text);text-decoration:none;border-bottom:1px solid var(--color-border)}
+    .container{max-width:var(--max-width);margin:0 auto;padding:0 var(--spacing-md)}
+    .header{padding:var(--spacing-sm) 0;position:sticky;top:0;background:var(--color-bg);z-index:100;border-bottom:1px solid var(--color-border)}
+    .header__inner{display:flex;justify-content:space-between;align-items:center}
+    .logo{font-size:1.5rem;font-weight:400;letter-spacing:-.03em;border:none}.logo .x{color:var(--color-accent)}
+    .nav{display:flex;gap:var(--spacing-md)}.nav a{font-size:.9rem;color:var(--color-text-light);border:none;padding:var(--spacing-xs) 0;position:relative}
+    .hero{padding:var(--spacing-xl) 0;text-align:center;min-height:70vh;display:flex;flex-direction:column;justify-content:center}
+    .hero__tagline{font-size:.875rem;color:var(--color-text-muted);text-transform:uppercase;letter-spacing:.1em;margin-bottom:var(--spacing-md)}
+    .hero__title{font-size:clamp(2.5rem,8vw,5rem);font-weight:300;margin-bottom:var(--spacing-md);letter-spacing:-.03em}.hero__title .x{color:var(--color-accent)}
+    .hero__subtitle{font-size:1.25rem;color:var(--color-text-light);max-width:600px;margin:0 auto var(--spacing-lg);font-weight:400}
+    .btn{display:inline-block;padding:.875rem 2rem;font-size:.9rem;font-weight:500;border:1px solid var(--color-text);background:transparent;color:var(--color-text);cursor:pointer;transition:all var(--transition);border-radius:0;text-decoration:none}
+    .btn--primary{background:var(--color-text);color:var(--color-white)}
+    .btn-group{display:flex;gap:var(--spacing-sm);justify-content:center;flex-wrap:wrap}
+    .section{padding:var(--spacing-xl) 0}.section--warm{background:var(--color-bg-warm)}
+    .stats{display:flex;justify-content:center;gap:var(--spacing-lg);text-align:center;flex-wrap:wrap}
+    .stat{min-width:120px}.stat__value{font-size:2.5rem;font-weight:300;line-height:1;margin-bottom:var(--spacing-xs)}
+    .stat__label{font-size:.75rem;text-transform:uppercase;letter-spacing:.1em;color:var(--color-text-muted)}
+  </style>
+  <!-- Full CSS - non-blocking load -->
+  <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="style.css"></noscript>
   <!-- Fonts - non-blocking load -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=JetBrains+Mono:wght@400&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=JetBrains+Mono:wght@400&display=swap" rel="stylesheet"></noscript>
-  <link rel="stylesheet" href="style.css">
 
   <!-- Structured Data -->
   <script type="application/ld+json">
