perf(site): eliminate forced reflow and add cache headers
- Replace preload + rel swap pattern with media="print" + media swap to avoid forced reflow
- Add _headers file with Cloudflare Pages cache directives
- Static assets cached for 1 year (immutable), HTML cached for 1 hour with revalidation

--- a/site/index.html
+++ b/site/index.html
@@ -60,13 +60,13 @@
     .stat{min-width:120px}.stat__value{font-size:2.5rem;font-weight:300;line-height:1;margin-bottom:var(--spacing-xs)}
     .stat__label{font-size:.75rem;text-transform:uppercase;letter-spacing:.1em;color:var(--color-text-muted)}
   </style>
-  <!-- Full CSS - non-blocking load -->
-  <link rel="preload" href="style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <!-- Full CSS - non-blocking load (media swap avoids reflow) -->
+  <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
   <noscript><link rel="stylesheet" href="style.css"></noscript>
   <!-- Fonts - non-blocking load -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=JetBrains+Mono:wght@400&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=JetBrains+Mono:wght@400&display=swap" media="print" onload="this.media='all'">
   <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=JetBrains+Mono:wght@400&display=swap" rel="stylesheet"></noscript>
 
   <!-- Structured Data -->
