docs(site): add HTMX and DATAOS attribution to footer

--- a/site/index.html
+++ b/site/index.html
@@ -295,6 +295,7 @@ document.querySelectorAll('.price').forEach(el => {
   <footer class="footer">
     <div class="container">
       <p class="footer__text">genX is open source. MIT License.</p>
+      <p class="footer__text" style="margin-top: 0.5rem;">Inspired by <a href="https://htmx.org" target="_blank" rel="noopener">HTMX</a> / Powered by <a href="https://dataos.software" target="_blank" rel="noopener">DATAOS</a></p>
     </div>
   </footer>
 </body>
