feat(domx): add domx-bridge for centralized DOM observation
- Add domx-bridge.js adapter for unified MutationObserver management
- Add XFactory exports to all modules (loadx, navx, dragx, tablex)
- Update bootloader with configurable modulePaths and parserPaths
- Fix bootloader to handle absolute paths starting with /
- Add domx integration BDD tests
- Update README with centralized DOM observation architecture
- Bump version to 1.0.0-alpha.2

BREAKING CHANGE: Modules now export prefixXFactory pattern for bootloader

--- a/site/demo.html
+++ b/site/demo.html
@@ -79,5 +79,12 @@
     </div>
     <iframe src="genx-demo.html" class="demo-frame" title="genX Interactive Demo"></iframe>
   </main>
+
+  <footer class="footer" style="padding: 1rem 0;">
+    <div class="container" style="text-align: center;">
+      <p class="footer__text" style="font-size: 0.875rem; color: var(--color-text-muted);">genX is open source. MIT License.</p>
+      <p class="footer__text" style="margin-top: 0.5rem; font-size: 0.875rem; color: var(--color-text-muted);">Inspired by <a href="https://htmx.org" target="_blank" rel="noopener">HTMX</a> / Powered by <a href="https://github.com/adamzwasserman/domx" target="_blank" rel="noopener">domx</a> &amp; <a href="https://dataos.software" target="_blank" rel="noopener">DATAOS</a></p>
+    </div>
+  </footer>
 </body>
 </html>
