feat: add Cloudflare Web Analytics tracking
- Add beacon script to all site HTML pages
- Uses defer attribute to avoid impacting FCP

--- a/site/docs.html
+++ b/site/docs.html
@@ -480,5 +480,8 @@ cp genX/src/*.js your-project/static/js/</code></pre>
       <p class="footer__text" style="margin-top: 0.5rem;">Inspired by <a href="https://htmx.org" target="_blank" rel="noopener">HTMX</a> / Powered by <a href="https://github.com/adamzwasserman/domx" target="_blank" rel="noopener">domx</a> &amp; <a href="https://dataos.software" target="_blank" rel="noopener">DATAOS</a></p>
     </div>
   </footer>
+
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "f424d9efa21c484c836c656285cb8d5c"}'></script>
 </body>
 </html>
